--- a/trunk/OnePercent/GameData/CSS/style.css
+++ b/trunk/OnePercent/GameData/CSS/style.css
@@ -1,8 +1,3 @@
-*
-{
-  color: #fff;
-}
-
 QLabel#LabelLoadingText
 {
   font-size: 20pt;
@@ -45,7 +40,9 @@ QWidget#WidgetRightPanel
   max-width: 200px;
 }
 
-QPushButton
+QCheckBox,
+QRadioButton,
+QLabel
 {
-  color: #000;
+  color: #fff;
 }
