- added skill points to game - start game by enabling one skill branch in a country - fixed bug of disappearing country menu after scrolling away from the country

--- a/OnePercent/GameData/CSS/style.css
+++ b/OnePercent/GameData/CSS/style.css
@@ -25,6 +25,11 @@ QLabel#LabelClickAgain
   font-size: 12pt;
 }
 
+QLabel#LabelSkillPoints
+{
+  font-size: 14pt;
+}
+
 QLabel#LabelDays
 {
   color: #fff;
