--- a/trunk/OnePercent/GameData/CSS/style.css
+++ b/trunk/OnePercent/GameData/CSS/style.css
@@ -25,6 +25,11 @@ QLabel#LabelClickAgain
   font-size: 12pt;
 }
 
+QLabel#LabelSkillPoints
+{
+  font-size: 14pt;
+}
+
 QLabel#LabelDays
 {
   color: #fff;
