--- a/trunk/OnePercent/GameData/CSS/MainFrameWidget.css
+++ b/trunk/OnePercent/GameData/CSS/MainFrameWidget.css
@@ -1,6 +1,7 @@
 onep--MainFrameWidget QFrame#FrameTopBar
 {
   margin: 0px;
+  padding: 5px 5px 0px 5px;
   background-color: rgba(20, 20, 20, 50%);
 }
 
@@ -34,4 +35,18 @@ onep--MainFrameWidget QLabel#LabelFps
   min-width: 35px;
   /*margin-right: 4px;*/
   text-align: right;
+}
+
+onep--MainFrameWidget QPushButton
+{
+  min-height: 26px;
+  min-width: 100px;
+  color: #fff;
+  background-color: rgba(20, 20, 20, 80%);
+  border: 1px solid #4417B5;
+}
+
+onep--MainFrameWidget QPushButton:hover
+{
+  background-color: rgba(60, 60, 60, 80%);
 }
