--- a/trunk/luadoc/templates/content/template.html
+++ b/trunk/luadoc/templates/content/template.html
@@ -5,10 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   <body>
-    <div id="content">
-      <h3>class {CLASS_NAME}</h3>
-      {CLASS_DESCRIPTION}
-    </div>
+    {CONTENT}
   </body>
 
 </html>
