--- a/trunk/luadoc/templates/content/template.html
+++ b/trunk/luadoc/templates/content/template.html
@@ -3,6 +3,9 @@
 
 <html>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <head>
+  	<link rel="stylesheet" href="{STYLESHEET_PATH}" type="text/css" />
+  </head>
 
   <body>
     {CONTENT}
