--- a/OnePercent/GameData/CSS/SkillsWidget.css
+++ b/OnePercent/GameData/CSS/SkillsWidget.css
@@ -1,7 +1,16 @@
 onep--SkillsWidget QFrame#FrameContent
 {
-  margin: 100px 100px 100px 100px;
+  margin: 60px 100px 60px 100px;
   padding: 0px;
   border: 4px solid transparent;
-  border-image: url(./GameData/ui/window_frame_1.png) 4px stretch;
+  /*border-image: url(./GameData/ui/window_frame_1.png) 4px stretch;*/
+  background-color: rgba(0, 0, 0, 240);
+}
+
+onep--SkillsWidget QPushButton#ButtonSkill
+{
+  min-width: 64px;
+  min-height: 64px;
+  max-width: 64px;
+  max-height: 64px;
 }
