added widget to display certain values

--- a/OnePercent/GameData/CSS/MainFrameWidget.css
+++ b/OnePercent/GameData/CSS/MainFrameWidget.css
@@ -11,6 +11,15 @@ onep--MainFrameWidget QFrame#FrameBottomBar
   background-color: rgba(20, 20, 20, 50%);
 }
 
+onep--MainFrameWidget QFrame#FrameLeftMenu
+{
+  margin: 0px;
+  padding: 5px;
+  min-width:350px;
+  max-width:350px;
+  background-color: rgba(20, 20, 20, 50%);
+}
+
 onep--MainFrameWidget QPushButton#ButtonSkills
 {
   min-width: 120px;
@@ -42,6 +51,11 @@ onep--MainFrameWidget QLabel#LabelFps
 {
   min-width: 35px;
   text-align: right;
+}
+
+onep--MainFrameWidget QLabel#LabelValue
+{
+  font-size:14pt;
 }
 
 onep--MainFrameWidget QPushButton
